initial public version

--- a/stencil-continents/index.html
+++ b/stencil-continents/index.html
@@ -8,7 +8,8 @@
         <div class="container">
             <div class="row m-3">
                 <h1>World Continents</h1>
-                <p>Ambrus Géza Gergely\nhttps://commons.wikimedia.org/wiki/File:Location_of_Continents.svg</p>
+                <p>Author: Ambrus Géza Gergely</p>
+                <p>Our World continents<br>Port of https://commons.wikimedia.org/wiki/File:Location_of_Continents.svg</p>
                 <p><a href="https://commons.wikimedia.org/wiki/File:Location_of_Continents.svg">License</a></p>
             </div>
 
